fix header font, spacing, weight, links, menu, position, closing, logo

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -20,6 +20,7 @@
 	gap: 80px;
 	@include flex(space-between, center);
 }
+
 .btnBurger {
 	display: inline-flex;
 	margin: 0;
@@ -32,23 +33,27 @@
 
 .btns {
 	display: contents;
+
+	@include media(tablet) {}
+}
+
+
+.open {
+	@include flex(flex-end, center);
+
+	flex-direction: column-reverse;
+	position: fixed;
+	top: 64px;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	text-align: center;
+	background-color: #fdf7f2;
+	z-index: 99;
+
 	@include media(tablet) {
+		margin-top: 40px;
 	}
-}
-
-.open{
-    @include flex(center);
-    flex-wrap: wrap-reverse;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    text-align: center;
-    background-color: #FDF7F2;;
-    z-index: 99;
-@include media(tablet) {
-	width:100%;
-}
-
 }
 
 .logoLink {
@@ -56,6 +61,7 @@
 		@include flex(space-between, center);
 	}
 }
+
 .logoBtn {
 	@include flex(space-between, center);
 	gap: 20px;
