--- a/src/components/Header/UserNav/UserNav.module.scss
+++ b/src/components/Header/UserNav/UserNav.module.scss
@@ -2,28 +2,36 @@
 
 @import 'src/shared/styles/mixins.scss';
 
-@include media(mobile) {
-}
-@include media(tablet) {
-}
-@include media(desktop) {
-}
+@include media(mobile) {}
+
+@include media(tablet) {}
+
+@include media(desktop) {}
 
 .svg {
 	fill: $secondary-text-color;
 	width: 20px;
 	height: 20px;
+
 	@include media(tablet) {
 		width: 28px;
 		height: 28px;
 	}
 }
+
 .link {
+	width: 100%;
+	height: 100%;
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 1.35;
 	color: $secondary-text-color;
 	text-decoration: none;
+
+	@include flex(center, center);
+	gap: 14px;
+
+
 	@include media(tablet) {
 		font-weight: 500;
 		font-size: 16px;
@@ -31,8 +39,10 @@
 		color: $secondary-text-color;
 		text-decoration: none;
 	}
-	@include media(desktop) {
-	}
+
+	@include media(desktop) {}
+
+
 }
 
 .container {
@@ -41,16 +51,24 @@
 
 	background: $accent-color;
 	border-radius: 40px;
-    @include flex(center, center);
+	@include flex(center, center);
 	gap: 14px;
 	margin-top: 46px;
+	transition: $transition;
+
 	@include media(tablet) {
 		width: 164px;
 		height: 44px;
 		margin-top: 0;
 		gap: 14px;
 	}
+
 	@include media(desktop) {
 		gap: 12px;
+	}
+
+	&:hover,
+	&:focus {
+		background: #FF6101
 	}
 }
